--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "fix": "eslint --fix . && prettier --write ./",
     "format": "prettier --write ./",
     "test": "vitest",
-    "ci": "npm run build && npm run lint && npm run fix && npm run test"
+    "ci": "npm run build && npm run lint && npm run fix && npm run test",
+    "prepublishOnly": "npm run ci",
+    "local-release": "changeset version && changeset publish"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.29.6",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
     "eslint": "^9.16.0",
