--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-core",
+  "name": "@melvinvmegen/js-core",
   "version": "0.0.0-development",
   "description": "",
   "main": "index.js",
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Melvinvmegen/js-core.git"
+    "url": "git+https://github.com/Melvinvmegen/js-core.git"
   },
   "release": {
     "branches": [
